Revision history for DBD-XMLSimple

0.08
	Use Test::DescribeMe to simplify tests
	Use Test::Needs

0.07	Fri Feb  2 09:05:41 EST 2024
	Fix uninit variable in DBI.pm

0.06	Sun Sep  3 03:28:35 EDT 2017
	Concatenate leafs of the same entry
	DBI now supports this module

0.05	Sun Sep  4 15:04:42 EDT 2016
	Support more free form input data

0.04	Sun Sep  4 07:53:01 EDT 2016
	Added data.xml to the pre-requisites

0.03	Sat Sep  3 09:08:15 EDT 2016
	Added SQL::Statement to the pre-requisites

0.02	Fri Sep  2 12:24:46 EDT 2016
	Added README and bin/xml to the MANIFEST

0.01    Wed Aug 31 11:52:07 EDT 2016
        First draft