@@ -1,19 +1,10 @@
+#!/usr/bin/env perl
+
 use strict;
 use warnings;
 
+use Test::DescribeMe qw(author);
 use Test::Most;
+use Test::Needs 'Test::Distribution';
 
-BEGIN {
-	if($ENV{RELEASE_TESTING}) {
-		eval {
-			require Test::Distribution;
-		};
-		if($@) {
-			plan(skip_all => 'Test::Distribution not installed');
-		} else {
-			import Test::Distribution;
-		}
-	} else {
-		plan(skip_all => 'Author tests not required for installation');
-	}
-}
+Test::Distribution->import();
